--- a/scratch.rc
+++ b/scratch.rc
@@ -4,5 +4,5 @@ source /usr/local/scratches/.scratch-root/scratch.config;
 source ${scratchGitRoot}/scratch.lib.sh;
 source ${scratchGitRoot}/scratch.aliases;
 
-export PATH=${scratchGitRoot}/usr/local/bin:$PATH
+export PATH=${scratchBin}:$PATH
 alias scratch="scratch-git $@"
