Update, fixing some stuff

--- a/scratch.config
+++ b/scratch.config
@@ -1,3 +1,4 @@
 scratchRoot=/usr/local/scratches;
-scratchGitRoot=${scratchRoot}/.scratch-root;
+scratchGitRoot=${scratchRoot};
 scratchBin=${scratchGitRoot}/usr/local/bin;
+
