--- a/scratch.rc
+++ b/scratch.rc
@@ -1,6 +1,6 @@
 #!/bin/bash 
 
-source /usr/local/scratches/.scratch-root/scratch.config;
+source /usr/local/scratches/scratch.config;
 source ${scratchGitRoot}/scratch.lib.sh;
 source ${scratchGitRoot}/scratch.aliases;
 
