--- a/scratch.config
+++ b/scratch.config
@@ -1,4 +1,4 @@
-scratchRoot=/usr/local/scratches;
-scratchGitRoot=${scratchRoot};
-scratchBin=${scratchGitRoot}/usr/local/bin;
+scratchRoot=/usr/local/scratches
+scratchGitRoot=${scratchRoot}
+scratchBin=${scratchGitRoot}/bin
 
