--- a/scratch.rc
+++ b/scratch.rc
@@ -5,4 +5,6 @@ source ${scratchGitRoot}/scratch.lib.sh;
 source ${scratchGitRoot}/scratch.aliases;
 
 export PATH=${scratchBin}:$PATH
-alias scratch="scratch-git $@"
+alias scratch-git="scratchGit $@"
+alias scratch="scratchGit $@"
+alias scratch-release="scratchGit add .; scratchGit commit -m 'Update'"
